[project]
name = "space-datasets"
version = "0.0.11"
authors = [{ name = "Space team", email = "no-reply@google.com" }]
description = "Unified storage framework for machine learning datasets"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
  "absl-py",
  "array-record",
  "cloudpickle",
  "numpy",
  "protobuf",
  "pyarrow >= 14.0.0",
  "pyroaring",
  "tensorflow_datasets",
  "typing_extensions",
]

[project.optional-dependencies]
dev = [
  "pandas == 2.1.4",
  "pyarrow-stubs",
  "ray == 2.9.1",
  "tensorflow",
  "types-protobuf",
]

[project.urls]
Homepage = "https://github.com/google/space"
Issues = "https://github.com/google/space/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]

[tool.pylint.format]
max-line-length = 80
indent-string = "  "
disable = [
  "duplicate-code",
  "fixme",
  "no-else-return",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "too-many-locals"
]

[tool.pylint.MAIN]
ignore = "space/core/proto"
ignored-modules = [
  "array_record",
  "datasets",
  "google.protobuf",
  "pyroaring",
  "space.core.proto",
  "substrait"
]
